stderr
Hiker.java:8: error: illegal start of expression
        if(hand.equals({"H2", "C3", "D4", "S5", "H6"})){
                       ^
Hiker.java:8: error: not a statement
        if(hand.equals({"H2", "C3", "D4", "S5", "H6"})){
                        ^
Hiker.java:8: error: ';' expected
        if(hand.equals({"H2", "C3", "D4", "S5", "H6"})){
                            ^
Hiker.java:8: error: illegal start of expression
        if(hand.equals({"H2", "C3", "D4", "S5", "H6"})){
                                                     ^
4 errors
